Implementação do cadastro de usuários e remoção dos cards. Faltando validações dos formulários e inclusão de usuários a board.

--- a/src/main/webapp/pages/board.html
+++ b/src/main/webapp/pages/board.html
@@ -5,7 +5,7 @@
 	    </div>
 	</div>
 	<div class="col-lg-4" ng-repeat="board in boards">
-		<a href="#/boards/1" class="alert-link" style="color: #fff">
+		<a href="#/boards/{{board.id}}" class="alert-link" style="color: #fff">
 			<div class="alert alert-dismissible board-alert">
 				<strong>{{board.title}}</strong>
 			</div>
