--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
       <h2 class="form-signin-heading">Efetue o login</h2>
       <input type="text" name='j_username' class="form-control" placeholder="Usuário">
       <input type="password" name='j_password' class="form-control" placeholder="Senha">
+      <p>Não tem uma conta? <a href="register.html">Cadastre-se aqui!</a></p>
       <button class="btn btn-lg btn-primary btn-block" style="background-color: #060; border-color: #060" type="submit">Entrar</button>
     </form>
   </div>
