--- a/src/main/webapp/pages/board-detail.html
+++ b/src/main/webapp/pages/board-detail.html
@@ -1,116 +1,164 @@
-<div style="background-color: #F0F0F0" ng-controller="CardCtrl"> 
-  <div class="container-fluid">
-    <div class="page-header header-welcome">
-      <h4><span class="glyphicon glyphicon-align-justify"></span> Bem-vindo ao Famban</h4>
-    </div>
-    <div class="col-lg-10">
-      <div style="background-color: #2c3e50; border-radius: 10px" class="container-fluid">
-        <br/>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <span class="glyphicon glyphicon glyphicon-flag"></span><strong> A Fazer</strong>
-                <button class="btn btn-danger btn-xs pull-right" ng-click="open()"><span class="glyphicon glyphicon-plus"></span> Card</button>
-              </div>
-              <div class="panel-body panel-height panel-background" droppable data-panel="todo">
-                <div ng-repeat="item in items">
-                  <div class="alert alert-dismissible alert-success" ng-if="item.status == 'todo'" draggable id="{{$index}}" data-model="20">
-                    <p>{{item.title}}</p>
-                    <p><a href="#/boards/{{board.id}}" ng-click="open(item)" style="color: #fff"><i class="glyphicon glyphicon-info-sign"></i></a> <span class="glyphicon glyphicon-remove-sign"></span></p>
-                  </div>
-                </div>
-              </div>
-            </div>          
-          </div>
-          <div class="col-lg-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <span class="glyphicon glyphicon glyphicon-flag"></span><strong> Fazendo</strong>
-              </div>
-              <div class="panel-body panel-height panel-background" droppable data-panel="doing" drop-complete="drop(id_banco, target)">
-                <div ng-repeat="item in items">
-                  <div class="alert alert-dismissible alert-success" ng-if="item.status == 'doing'" draggable id="{{$index}}" data-model="20">
-                    <p>{{item.title}}</p>
-                    <p><a href="#/boards/{{board.id}}" ng-click="open(item)" style="color: #fff"><i class="glyphicon glyphicon-info-sign"></i></a> <span class="glyphicon glyphicon-remove-sign"></span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="panel panel-default">
-              <div class="panel-heading">
-                <span class="glyphicon glyphicon glyphicon-flag"></span><strong> Feito</strong>
-              </div>
-              <div class="panel-body panel-height panel-background" droppable data-panel="done" drop-complete="drop(id_banco, target)">
-                <div ng-repeat="item in items">
-                  <div class="alert alert-dismissible alert-success" ng-if="item.status == 'done'" draggable id="{{$index}}" data-model="20">
-                    <p>{{item.title}}</p>
-                    <p><a href="#/boards/{{board.id}}" ng-click="open(item)" style="color: #fff"><i class="glyphicon glyphicon-info-sign"></i></a> <span class="glyphicon glyphicon-remove-sign"></span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-2">
-      <div class="page-header">
-        <h4><strong>Comentários</strong></h4>
-      </div>
-      <!--Deixar dinâmico com o angular-->
-      <ul class="media-list">
-        <li class="media comment">
-          <div class="media-left">
-            <img src="/famban/static/img/img1.jpg" height="30px" width="30px" class="media-object">
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Moisés disse:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-        </li>
-        <li class="media comment">
-          <div class="media-left">
-            <img src="/famban/static/img/img2.jpg" height="30px" width="30px" class="media-object">
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Anderson disse:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-        </li>
-        <li class="media comment">
-          <div class="media-left">
-            <img src="/famban/static/img/img6.jpg" height="30px" width="30px" class="media-object">
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Nathália disse:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-        </li>
-        <li class="media comment">
-          <div class="media-left">
-            <img src="/famban/static/img/img4.jpg" height="30px" width="30px" class="media-object">
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Maiara disse:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-        </li>
-        <li class="media comment">
-          <div class="media-left">
-            <img src="/famban/static/img/img5.jpg" height="30px" width="30px" class="media-object">
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Lucas disse:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-        </li>
-      </ul>         
-      <!--End-->
-    </div>
-  </div>
+<div style="background-color: #F0F0F0" ng-controller="CardCtrl">
+	<div class="container-fluid">
+		<div class="page-header header-welcome">
+			<h4>
+				<span class="glyphicon glyphicon-align-justify"></span> Bem-vindo ao
+				Famban
+			</h4>
+		</div>
+		<div class="col-lg-10">
+			<div style="background-color: #2c3e50; border-radius: 10px"
+				class="container-fluid">
+				<br />
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<span class="glyphicon glyphicon glyphicon-flag"></span><strong>
+									A Fazer</strong>
+								<button class="btn btn-danger btn-xs pull-right"
+									ng-click="open()">
+									<span class="glyphicon glyphicon-plus"></span> Card
+								</button>
+							</div>
+							<div class="panel-body panel-height panel-background" droppable
+								data-panel="todo">
+								<div ng-repeat="item in items">
+									<div class="alert alert-dismissible alert-success"
+										ng-if="item.status == 'todo'" draggable id="{{$index}}"
+										data-model="20">
+										<p>{{item.title}}</p>
+										<p>
+											<a href="#/boards/{{board.id}}" ng-click="open(item)"
+												style="color: #fff"><i
+												class="glyphicon glyphicon-info-sign"></i></a> <a
+												href="#/boards/{{board.id}}" ng-click="drop($index)"
+												style="color: #fff"><span
+												class="glyphicon glyphicon-remove-sign"></span></a>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<span class="glyphicon glyphicon glyphicon-flag"></span><strong>
+									Fazendo</strong>
+							</div>
+							<div class="panel-body panel-height panel-background" droppable
+								data-panel="doing" drop-complete="drop(id_banco, target)">
+								<div ng-repeat="item in items">
+									<div class="alert alert-dismissible alert-success"
+										ng-if="item.status == 'doing'" draggable id="{{$index}}"
+										data-model="20">
+										<p>{{item.title}}</p>
+										<p>
+											<a href="#/boards/{{board.id}}" ng-click="open(item)"
+												style="color: #fff"><i
+												class="glyphicon glyphicon-info-sign"></i></a> <span
+												class="glyphicon glyphicon-remove-sign"></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<span class="glyphicon glyphicon glyphicon-flag"></span><strong>
+									Feito</strong>
+							</div>
+							<div class="panel-body panel-height panel-background" droppable
+								data-panel="done" drop-complete="drop(id_banco, target)">
+								<div ng-repeat="item in items">
+									<div class="alert alert-dismissible alert-success"
+										ng-if="item.status == 'done'" draggable id="{{$index}}"
+										data-model="20">
+										<p>{{item.title}}</p>
+										<p>
+											<a href="#/boards/{{board.id}}" ng-click="open(item)"
+												style="color: #fff"><i
+												class="glyphicon glyphicon-info-sign"></i></a> <span
+												class="glyphicon glyphicon-remove-sign"></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-2">
+			<div class="page-header">
+				<h4>
+					<strong>Comentários</strong>
+				</h4>
+			</div>
+			<!--Deixar dinâmico com o angular-->
+			<ul class="media-list">
+				<li class="media comment">
+					<div class="media-left">
+						<img src="/famban/static/img/img1.jpg" height="30px" width="30px"
+							class="media-object">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Moisés disse:</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Integer posuere erat a ante.</p>
+					</div>
+				</li>
+				<li class="media comment">
+					<div class="media-left">
+						<img src="/famban/static/img/img2.jpg" height="30px" width="30px"
+							class="media-object">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Anderson disse:</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Integer posuere erat a ante.</p>
+					</div>
+				</li>
+				<li class="media comment">
+					<div class="media-left">
+						<img src="/famban/static/img/img6.jpg" height="30px" width="30px"
+							class="media-object">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Nathália disse:</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Integer posuere erat a ante.</p>
+					</div>
+				</li>
+				<li class="media comment">
+					<div class="media-left">
+						<img src="/famban/static/img/img4.jpg" height="30px" width="30px"
+							class="media-object">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Maiara disse:</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Integer posuere erat a ante.</p>
+					</div>
+				</li>
+				<li class="media comment">
+					<div class="media-left">
+						<img src="/famban/static/img/img5.jpg" height="30px" width="30px"
+							class="media-object">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Lucas disse:</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Integer posuere erat a ante.</p>
+					</div>
+				</li>
+			</ul>
+			<!--End-->
+		</div>
+	</div>
 </div>
 
 <script type="text/ng-template" id="myModalContent.html">
