Implementação da adição dos usuários as boards, faltando validação dos campos

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -47,6 +47,7 @@
 <script src="/famban/static/js/directives/droppable.js"></script>
 <script src="/famban/static/js/controllers/boardController.js"></script>
 <script src="/famban/static/js/controllers/cardController.js"></script>
+<script src="/famban/static/js/controllers/userController.js"></script>
 <script src="/famban/static/js/route/routes.js"></script>
 </body>
 </html>
