--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="static/css/bootswatch.min.css">
 	<link href="static/css/signin.css" rel="stylesheet">
 </head>
-<body ng-controller="UserCtrl">
+<body ng-controller="SigninCtrl">
   <div class="container">
     <form class="form-signin">
       <header>
@@ -25,6 +25,6 @@
 <script src="/famban/static/js/jquery.min.js"></script>
 <script src="static/js/bootstrap.min.js" /></script>
 <script src="/famban/static/js/angular.min.js"></script>
-<script src="/famban/static/js/controllers/userController.js"></script>
+<script src="/famban/static/js/controllers/signinController.js"></script>
 </body>
 </html>
