--- a/src/main/webapp/pages/board.html
+++ b/src/main/webapp/pages/board.html
@@ -18,17 +18,20 @@
 <h3 class="modal-title">Novo Quadro</h3>
 </div>
 <div class="modal-body">
-<form role="form" class="ng-scope ng-pristine ng-valid">
+<form name="form" class="ng-scope ng-pristine ng-valid">
 <input type="hidden"/>
 <div class="form-group">
-<label for="name">Título</label>
-<input ng-model="board.title" ng-disabled="board.id" type="name" class="form-control">
+<label>Título</label>
+<input name="bTitle" ng-model="board.title" ng-disabled="board.id" type="name" required ng-minlength="4" class="form-control">
+<div ng-messages="form.bTitle.$error" ng-show="form.bTitle.$touched">
+  <p style="color: red;" ng-message="required">Este campo é obrigatório!</p>
+</div>
 </div>
 </form>
 </div>
 <div class="modal-footer">
 <div ng-if="board.id == null">
-  <button class="btn btn-info" type="button" ng-click="save()">Salvar</button>
+  <button class="btn btn-info" type="button" ng-click="save()" ng-disabled="form.bTitle.$error.required">Salvar</button>
   <button class="btn btn-danger" type="button" ng-click="cancel()">Cancel</button>
 </div>
 <div ng-if="board.id != null">
