--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -41,6 +41,7 @@
 <script src="/famban/static/js/bootstrap.min.js"></script>
 <script src="/famban/static/js/angular.min.js"></script>
 <script src="/famban/static/js/angular-route.min.js"></script>
+<script src="/famban/static/js/angular-messages.min.js"></script>
 <script src="/famban/static/js/app/app.js"></script>
 <script src="/famban/static/js/ui-bootstrap-tpls-0.14.3.min.js"></script>
 <script src="/famban/static/js/directives/draggable.js"></script>
