--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Sistema de Cadastro de Grupos - APS</title>
+	<title>Famban</title>
 	<link rel="stylesheet" href="static/css/bootswatch.min.css">
 	<link href="static/css/signin.css" rel="stylesheet">
 	<script src="static/js/bootstrap.min.js" /></script>
