--- a/src/main/webapp/pages/board.html
+++ b/src/main/webapp/pages/board.html
@@ -23,7 +23,7 @@
 <div class="form-group">
 <label>Título</label>
 <input name="bTitle" ng-model="board.title" ng-disabled="board.id" type="name" required ng-minlength="4" class="form-control">
-<div ng-messages="form.bTitle.$error" ng-show="form.bTitle.$touched">
+<div ng-messages="form.bTitle.$error" ng-show="form.bTitle.$error.required && form.bTitle.$touched">
   <p style="color: red;" ng-message="required">Este campo é obrigatório!</p>
 </div>
 </div>
@@ -31,7 +31,7 @@
 </div>
 <div class="modal-footer">
 <div ng-if="board.id == null">
-  <button class="btn btn-info" type="button" ng-click="save()" ng-disabled="form.bTitle.$error.required">Salvar</button>
+  <button class="btn btn-info" type="button" ng-click="save()" ng-disabled="form.$invalid">Salvar</button>
   <button class="btn btn-danger" type="button" ng-click="cancel()">Cancel</button>
 </div>
 <div ng-if="board.id != null">
