--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -25,9 +25,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Opções <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Opções <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Perfil</a></li>
             <li><a href="/famban/j_spring_security_logout">Sair</a></li>
           </ul>
         </li>
